# 6dof-singularity-analysis

./: .gitignore  README.md
broken/orbitador/: CMakeLists.txt  package.xml
broken/orbitador/launch/: description.launch.py  display.launch.py
broken/orbitador/meshes/: robot_6dof_base_2rkxk0.dae  robot_6dof_base_x9wae5.dae  robot_6dof_eslabon_003_kgpdci.dae  robot_6dof_eslabon_003_nphfiv.dae  robot_6dof_eslabon_003_rnysb1.dae  robot_6dof_eslabon_003_stx6cg.dae  robot_6dof_eslabon_003_u51f5k.dae  robot_6dof_eslabon_003_xqcdmt.dae  robot_6dof_eslabon_35ca65.dae  robot_6dof_eslabon_azz3rc.dae  robot_6dof_eslabon_kpqsqe.dae  robot_6dof_eslabon_ma0lrf.dae  robot_6dof_eslabon_wckf2p.dae  robot_6dof_eslabon_wivsgo.dae
broken/orbitador/rviz/: robot_description.rviz
broken/orbitador/urdf/: Robot_wrapper.urdf.xacro
broken/orbitador/worlds/: empty_world.sdf
cad/: robot_1_eslabon.FCStd
meshes/: _dof_base_2whpfp.dae  _dof_base_9jyggq.dae  _dof_base_eggrod.dae  _dof_base_gsst9l.dae  _dof_base_krgzzq.dae  _dof_base_prbuph.dae  _dof_base_qfiesf.dae  _dof_base_rb5ne8.dae  _dof_base_sm6fop.dae  _dof_base_yoh5p2.dae  _dof_cuerpo_5artxv.dae  _dof_cuerpo_evwmbw.dae  _dof_cuerpo_h8h7so.dae  _dof_cuerpo_uqfpyq.dae  _dof_eslabon_1_djhkdj.dae  _dof_eslabon_1_fk8e70.dae  _dof_eslabon_1_gizhbg.dae  _dof_eslabon_1_kd9jcn.dae  _dof_eslabon_1_oszgcq.dae  _dof_eslabon_1_q2r2wi.dae  _dof_eslabon_1_ra71na.dae  _dof_eslabon_1_wpx5en.dae  _dof_eslabon_1_x835yn.dae  _dof_eslabon_1_yprfec.dae  _dof_eslabon_2_7hzlr7.dae  _dof_eslabon_2_8o0981.dae  _dof_eslabon_2_9efdx3.dae  (+33 more)
urdf/: Robot.urdf
(+145 files in other folders)
